--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: master
 
+env:
+  BUILD_NUMBER: ${{ github.run_number }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,8 +21,10 @@ jobs:
       run: |
         zip -r resource_pack.zip assets/
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
+    - name: Create Release & Upload Assets
+      id: create_release
+      uses: softprops/action-gh-release@v1
       with:
-        name: resource-pack
-        path: resource_pack.zip
+        files: ${{ env.projectName }}-build-${{ github.run_number }}.zip
+        tag_name: build-${{ github.run_number }}
+        name: ${{ env.projectName }}.zip
