--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,25 @@
-name: Minecraft Resource Pack Build
+name: Build and Upload Resource Pack
 
 on:
   push:
-    branches: master
-  pull_request:
-    branches: master
-
-env:
-  BUILD_NUMBER: ${{ github.run_number }}
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-      
-    - name: Archive Resource Pack
-      run: |
-        zip -r resource_pack.zip assets/
 
-    - name: Create Release & Upload Assets
-      id: create_release
-      uses: softprops/action-gh-release@v1
-      with:
-        #files: resource-pack-build-${{ github.run_number }}.zip
-        tag_name: build-${{ github.run_number }}
-        name: resource-pack.zip
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Archive Resource Pack
+        run: |
+          # Create a zip file of your resource pack
+          zip -r resource_pack.zip <path-to-resource-pack-directory>
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: resource-pack
+          path: resource_pack.zip
