--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,45 @@
-name: Build and Upload Resource Pack
+name: Resource Pack Release
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Archive Resource Pack
-        run: |
-          # Create a zip file of your resource pack
-          zip -r resource_pack.zip <path-to-resource-pack-directory>
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: resource-pack
-          path: resource_pack.zip
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      
+    - name: Set up JDK 8
+      uses: actions/setup-java@v2
+      with:
+        java-version: 8
+        
+    - name: Build resource pack archive
+      run: zip -r resource_pack.zip .
+      
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v1.0.0
+        release_name: Release v1.0.0
+        body: |
+          Description of the release.
+        draft: false
+        prerelease: false
+      
+    - name: Upload release asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./resource_pack.zip
+        asset_name: resource_pack.zip
+        asset_content_type: application/zip
