--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v3
       
     - name: Set up JDK 8
       uses: actions/setup-java@v2
@@ -29,8 +29,6 @@ jobs:
       with:
         tag_name: v1.0.0
         release_name: Release v1.0.0
-        body: |
-          Description of the release.
         draft: false
         prerelease: false
       
