--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Resource Pack Release
+name: Minecraft Resource Pack Build
 
 on:
   push:
@@ -8,36 +8,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: write-all
     
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-      
-    - name: Set up JDK 8
-      uses: actions/setup-java@v2
-      with:
-        java-version: 8
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Build resource pack
+      run: |
+        # Add build commands here to manipulate your resource pack assets
+        # For example:
+        # - Convert textures to the desired format
+        # - Optimize file sizes
+        # - Apply modifications to the assets
         
-    - name: Build resource pack archive
-      run: zip -r resource_pack.zip .
-      
-    - name: Create release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # This command simply lists the contents of the assets folder
+        ls assets/
+
+    - name: Archive resource pack
+      run: |
+        # Compress the resource pack into a ZIP file
+        zip -r resource_pack.zip assets/
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
       with:
-        tag_name: v1.0.0
-        release_name: Release v1.0.0
-        draft: false
-        prerelease: false
-      
-    - name: Upload release asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./resource_pack.zip
-        asset_name: resource_pack.zip
-        asset_content_type: application/zip
+        name: resource-pack
+        path: resource_pack.zip
+        
