--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,17 +8,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: write-all
     
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
       
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 17
-        check-latest: true
+    #- name: Set up JDK 17
+    #  uses: actions/setup-java@v3
+    #  with:
+    #    distribution: temurin
+    #    java-version: 17
+    #    check-latest: true
         
     - name: Build resource pack archive
       run: zip -r resource_pack.zip .
